Bug fixing #24 (#25)
* Intermediate commit: removed repeated css background-color properties; fixed Edge display bug; added Myriad font for Android; edited colors; fixed scroll to Add button. Task#24.

* Font added.

* Intermediate commit: fixed function to scroll to Add button and Edge resizing bug. Task #24.

* Removed getPadding function; fixed Firefox rough shadows; made scrollbar transparent (except Firefox); fixed IE bugs: replaced find with filter function, fixed closure in updatePlayer function. Task #24.

* Added favicon.ico

* Deleted redundant spaces, widened player field to 100% page width.

* Added new favicon.png and a new html tag for it. Task #24.

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -30,6 +30,10 @@ footer, header, menu, nav, section {
 
 
 /************* Main styles *************/
+@font-face {
+    font-family: MyriadPro;
+    src: url(../fonts/myriad-pro-regular.otf);
+}
 html {
     font-size: 10px;
 }
@@ -74,6 +78,21 @@ button:hover {
 button:focus {
     outline: none !important;
 }
+.blue {
+    color: rgb(1, 168, 253);
+}
+.blue_bg {
+    background-color: rgb(1, 168, 253);
+}
+.orange {
+    color: rgb(255, 108, 3);
+}
+.white {
+    color: rgb(255, 255, 255);
+}
+.gray_bg {
+    background-color: rgb(113, 113, 113);
+}
 
 
 /*** FLEX MODEL***/
@@ -108,7 +127,7 @@ button:focus {
 /*** HEADER ***/
 header, footer {
     position: relative;
-    background-color: rgb(52, 52, 52);
+    background-color: rgb(49, 49, 49);
 }
 header {
     height: 10vh;
@@ -140,7 +159,6 @@ header .header_block {
     order: 2;
     flex-grow: 3;
     width: 240rem;
-    color: rgb(81, 168, 255);
 }
 .game_title h2 {
     margin: 0;
@@ -166,7 +184,6 @@ header .header_block {
     padding: 0;
     border: none;
     border-radius: 50%;
-    background-color: rgb(112, 112, 112);
     vertical-align: middle;
 }
 #start_game button:hover,
@@ -184,15 +201,6 @@ header .header_block {
     left: 15px;
     color: rgb(255, 255, 255);
 }
-.blue {
-    color: rgb(81, 168, 255);
-}
-.orange {
-    color: rgb(255, 102, 51);
-}
-.white {
-    color: rgb(255, 255, 255);
-}
 
 
 /*** SETTINGS: FIELD ***/
@@ -207,6 +215,10 @@ header .header_block {
     height: 340rem;
     overflow-x: hidden;
     overflow-y: auto;
+    -ms-overflow-style: none;
+}
+::-webkit-scrollbar {
+    width: 0px;
 }
 .field_settings_group {
     display: flex;
@@ -229,7 +241,6 @@ header .header_block {
     width: 100%;
     border: none;
     border-radius: 2rem;
-    background-color: rgb(112, 112, 112);
 }
 .inc.button,
 .dec.button {
@@ -259,7 +270,6 @@ header .header_block {
     width: 100%;
     height: 91rem;
     margin: 5rem 0;
-    color: rgb(81, 168, 255);
     font-size: 3rem;
     font-weight: bold;
     box-shadow: 0 0 40rem rgba(70,70,70,0.5);
@@ -268,6 +278,7 @@ header .header_block {
     position: relative;
     top: 8rem;
     font-size: 17rem;
+    text-shadow: 0 0 7rem rgba(0, 0, 0, 0.2);
 }
 .cell_count .settings-control {
     position: relative;
@@ -306,7 +317,6 @@ header .header_block {
     border: none;
     border-radius: 3rem;
     color: rgb(255, 255, 255);
-    background-color: rgb(112, 112, 112);
     font-size: 25rem;
     font-weight: bold;
     text-align: left;
@@ -330,7 +340,6 @@ header .header_block {
     height: 30rem;
     border: none;
     border-radius: 50%;
-    background-color: rgb(112, 112, 112);
     box-shadow: 0 0 40rem rgba(70,70,70,0.5);
 }
 .symbol_selected:hover,
@@ -342,10 +351,7 @@ header .header_block {
     width: 16rem;
 }
 .remove_player {
-    box-shadow: 0 0 10rem rgb(81, 168, 255);
-}
-.remove_player {
-    background-color: rgb(81, 168, 255);
+    box-shadow: 0 0 10rem rgba(1, 168, 253, 0.5);
 }
 .remove_player > span {
     color: rgb(255, 255, 255);
@@ -355,8 +361,7 @@ header .header_block {
     width: 100%;
     height: 30rem;
     border-radius: 2rem;
-    background-color: rgb(81, 168, 255);
-    box-shadow: 0 0 30rem rgba(81, 168, 255, 0.5);
+    box-shadow: 0 0 30rem rgba(1, 168, 253, 0.5);
 }
 .add_player:hover {
     box-shadow: none;
@@ -376,17 +381,14 @@ header .header_block {
 .dropdown-menu {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
     min-width: 95rem;
+    border-radius: 2rem;
     box-shadow: 0 0 20rem 0 rgba(0,0,0,0.5);
     padding: 2.5rem;
     z-index: 1;
 }
 .show {
     display: block;
-}
-.dropdown-menu.player_symbol {
-    background-color: rgb(112, 112, 112);
 }
 .dropdown-menu.player_symbol img {
     float: left;
@@ -412,7 +414,6 @@ header .header_block {
 }
 .dropdown-menu.player_type {
     min-width: 5rem;
-    background-color: rgb(112, 112, 112);
 }
 .dropdown-menu.player_type li {
     width: 25rem;
@@ -436,6 +437,9 @@ header .header_block {
 /*** PLAY FIELD ***/
 #game_field_container {
     overflow: hidden;
+}
+#game_field_container .container {
+    max-width: 100%;
 }
 #game_field_container .transformer {
     padding: 0;
@@ -462,7 +466,6 @@ header .header_block {
     margin: 5.8rem;
     border: none;
     border-radius: 3rem;
-    background-color: rgb(112, 112, 112);
     box-shadow: 0 0 40rem rgba(70,70,70,0.5);
     cursor: pointer;
 }
@@ -511,5 +514,31 @@ footer .wrapper {
 @media (max-width: 600px) {
     header .transformer {
         top: calc(100% / 5);
+    }
+}
+
+
+/*** Mozilla Firefox ***/
+@-moz-document url-prefix() {
+    #start_game button:hover,
+    #settings_btn button:hover {
+        box-shadow: 0 0 8rem rgba(255,255,255,0.5);
+    }
+    .inc.button,
+    .dec.button,
+    .cell_count,
+    .player_name input,
+    .symbol_selected,
+    .type_selected,
+    .remove_player,
+    .dropdown-menu,
+    .field_cell {
+        box-shadow: 0 0 6rem rgba(70,70,70,0.5);
+    }
+    .remove_player {
+        box-shadow: 0 0 6rem rgba(1, 168, 253, 0.5);
+    }
+    .add_player {
+        box-shadow: 0 0 7rem rgba(1, 168, 253, 0.5);
     }
 }
